# ChangeLog for media-libs/libmovtar
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/media-libs/libmovtar/Attic/ChangeLog,v 1.3 2002/05/31 01:33:26 seemant Exp $

*libmovtar-0.1.3 (30 May 2002)

  30 May 2002; Seemant Kulleen <seemant@gentoo.org> libmovtar-0.1.3.ebuild
  files/digest-libmovtar-0.1.3 :

  Version bump.

*libmovtar-0.1.2 (11 Apr 2002)

  11 Apr 2002; Spider <spider@gentoo.org>
  Update all glib dependencies to use glib-1.2*  in preparation of unmasking the glib-2.0.1 packages


*libmovtar-0.1.2 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.