@@ -1,6 +1,14 @@
 # ChangeLog for media-libs/libmovtar
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libmovtar/Attic/ChangeLog,v 1.3 2002/05/31 01:33:26 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libmovtar/Attic/ChangeLog,v 1.4 2002/07/08 14:32:59 seemant Exp $
+
+*libmovtar-0.1.3-r1 (08 Jul 2002)
+
+  08 Jul 2002; Seemant Kulleen <seemant@gentoo.org>
+  libmovtar-0.1.3-r1.ebuild files/digest-libmovtar-0.1.3-r1 :
+
+  Portage doesn't src_compile and src_install automatically any more, so
+  added those functions in.
 
 *libmovtar-0.1.3 (30 May 2002)
 
